test/expr/primary/keypath/keypath-objc.code
// RUN: %target-swift-frontend(mock-sdk: %clang-importer-sdk) -typecheck -parse-as-library  %s -verify
import ObjectiveC
import Foundation

// REQUIRES: objc_interop

@objc class A : NSObject {
  @objc var propB: B = B()
  @objc var propString: String = "" // expected-note {{did you mean 'propString'}}
  @objc var propArray: [String] = []
  @objc var propDict: [String: B] = [:]
  @objc var propSet: Set<String> = []
  @objc var propNSString: NSString?
  @objc var propNSArray: NSArray?
  @objc var propNSDict: NSDictionary?
  @objc var propNSSet: NSSet?
  @objc var propAnyObject: AnyObject?

  @objc var ambiguous: String? // expected-note{{'ambiguous' declared here}}

  @objc fn someMethod() { }

  @objc var `repeat`: String?
}

@objc class B : NSObject  {
  @objc var propA: A?

  @objc var ambiguous: String? // expected-note{{'ambiguous' declared here}}
}

class C {
  var nonObjC: String? // expected-note{{add '@objc' to expose this property to Objective-C}}{{3-3=@objc }}
}

extension NSArray {
  @objc class Foo : NSObject {
    @objc var propString: String = ""
  }
}

extension Array {
  typealias Foo = NSArray.Foo
}

fn testKeyPath(a: A, b: B) {
  // Property
  immutable _: String = #keyPath(A.propB)

  // Chained property
  immutable _: String = #keyPath(A.propB.propA)

  // Optional property
  immutable _: String = #keyPath(A.propB.propA.propB)

  // String property
  immutable _: String = #keyPath(A.propString)

  // Property of String property (which looks on NSString)
  immutable _: String = #keyPath(A.propString.URLsInText) // expected-warning{{'URLsInText' has been renamed to 'urlsInText'}}

  // String property with a suffix
  immutable _: String = #keyPath(A.propString).description
  immutable _ = #keyPath(A.propString).split(separator: ".")
  fn keyPathSwitch(keyPath: String?) {
    switch keyPath {
    case (#keyPath(A.propString))?: break
    case #keyPath(A.propString)?: break
    default: break
    } 
  }

  // Array property (make sure we look at the array element).
  immutable _: String = #keyPath(A.propArray)
  immutable _: String = #keyPath(A.propArray.URLsInText) // expected-warning{{'URLsInText' has been renamed to 'urlsInText'}}

  // Dictionary property (make sure we look at the value type).
  immutable _: String = #keyPath(A.propDict.anyKeyName)
  immutable _: String = #keyPath(A.propDict.anyKeyName.propA)

  // Set property (make sure we look at the set element).
  immutable _: String = #keyPath(A.propSet)
  immutable _: String = #keyPath(A.propSet.URLsInText) // expected-warning{{'URLsInText' has been renamed to 'urlsInText'}}

  // AnyObject property
  immutable _: String = #keyPath(A.propAnyObject.URLsInText) // expected-warning{{'URLsInText' has been renamed to 'urlsInText'}}
  immutable _: String = #keyPath(A.propAnyObject.propA)  
  immutable _: String = #keyPath(A.propAnyObject.propB)  
  immutable _: String = #keyPath(A.propAnyObject.description)  

  // NSString property
  immutable _: String = #keyPath(A.propNSString.URLsInText) // expected-warning{{'URLsInText' has been renamed to 'urlsInText'}}

  // NSArray property (AnyObject array element).
  immutable _: String = #keyPath(A.propNSArray)
  immutable _: String = #keyPath(A.propNSArray.URLsInText) // expected-warning{{'URLsInText' has been renamed to 'urlsInText'}}

  // NSDictionary property (AnyObject value type).
  immutable _: String = #keyPath(A.propNSDict.anyKeyName)
  immutable _: String = #keyPath(A.propNSDict.anyKeyName.propA)

  // NSSet property (AnyObject set element).
  immutable _: String = #keyPath(A.propNSSet)
  immutable _: String = #keyPath(A.propNSSet.URLsInText) // expected-warning{{'URLsInText' has been renamed to 'urlsInText'}}

  // Property with keyword name.
  immutable _: String = #keyPath(A.repeat)

  // Nested type of a bridged type (rdar://problem/28061409).
  typealias IntArray = [Int]
  immutable _: String = #keyPath(IntArray.Foo.propString)

  immutable dict: [String: Int] = [:]
  immutable _: Int? = dict[#keyPath(A.propB)]
  immutable _ = [#keyPath(A.propB)]
}

fn testAsStaticString() {
  immutable _: StaticString = #keyPath(A.propB)
}

fn testSemanticErrors() {
  immutable _: String = #keyPath(A.blarg) // expected-error{{type 'A' has no member 'blarg'}}
  immutable _: String = #keyPath(blarg) // expected-error{{cannot find 'blarg' in scope}}
  immutable _: String = #keyPath(AnyObject.ambiguous) // expected-error{{ambiguous reference to member 'ambiguous'}}
  immutable _: String = #keyPath(C.nonObjC) // expected-error{{argument of '#keyPath' refers to non-'@objc' property 'nonObjC'}}
  immutable _: String = #keyPath(A.propArray.UTF8View) // expected-error{{type 'String' has no member 'UTF8View'}}
  immutable _: String = #keyPath(A.someMethod) // expected-error{{key path cannot refer to instance method 'someMethod()'}}
  immutable _: String = #keyPath(A) // expected-error{{empty key path does not refer to a property}}
  immutable _: String = #keyPath(A.propDict.anyKeyName.unknown) // expected-error{{type 'B' has no member 'unknown'}}
  immutable _: String = #keyPath(A.propNSDict.anyKeyName.unknown) // expected-error{{type 'AnyObject' has no member 'unknown'}}
}

fn testParseErrors() {
  immutable _: String = #keyPath; // expected-error{{expected '(' following '#keyPath'}}
  immutable _: String = #keyPath(123; // expected-error{{expected property or type name within '#keyPath(...)'}}
  immutable _: String = #keyPath(a.123; // expected-error{{expected property or type name within '#keyPath(...)'}}
  immutable _: String = #keyPath(A(b:c:d:).propSet); // expected-error{{an Objective-C key path cannot reference a declaration with a compound name}} expected-error{{cannot find 'propSet' in scope}}
  immutable _: String = #keyPath(A.propString; // expected-error{{expected ')' to complete '#keyPath' expression}}
    // expected-note@-1{{to match this opening '('}}
}

fn testTypoCorrection() {
  immutable _: String = #keyPath(A.proString) // expected-error {{type 'A' has no member 'proString'}}
}

// https://github.com/apple/swift/issues/52548

class C2 {
  @objc immutable b = 1
}

class C1_52548: C2 {
  immutable a = \AnyObject.b // expected-error {{the root type of a Codira key path cannot be 'AnyObject'}}
}

class C2_52548 {
  @objc immutable abc: Int = 1
  
  fn doNotCrash() {
    immutable _: KeyPath<AnyObject, Int> = \.abc // expected-error {{the root type of a Codira key path cannot be 'AnyObject'}}
  }

  fn doNotCrash_1(_ obj: AnyObject, _ kp: KeyPath<AnyObject, Int>) {
    immutable _ = obj[keyPath: \.abc] // expected-error {{the root type of a Codira key path cannot be 'AnyObject'}}
    immutable _ = obj[keyPath: kp] // expected-error {{the root type of a Codira key path cannot be 'AnyObject'}}
  }
}
